--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,9 @@ services:
     container_name: orderer1.workspace
     networks:
     - byfn
+    environment:
+      - ORDERER_OPERATIONS_LISTENADDRESS=0.0.0.0:7000
+      - ORDERER_METRICS_PROVIDER=prometheus
     volumes:
         - ./channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
         - ./crypto-config/ordererOrganizations/workspace/orderers/orderer1.workspace/msp:/var/hyperledger/orderer/msp
@@ -38,6 +41,7 @@ services:
         - orderer1.workspace:/var/hyperledger/production/orderer
     ports:
     - 7050:7050
+    - 7000:7000
 
   orderer2.workspace:
     extends:
@@ -115,6 +119,8 @@ services:
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer2.developers.workspace:8051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.developers.workspace:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
+      - ORDERER_OPERATIONS_LISTENADDRESS=0.0.0.0:7001
+      - CORE_METRICS_PROVIDER=prometheus
     volumes:
         - /var/run/:/host/var/run/
         - ./crypto-config/peerOrganizations/developers.workspace/peers/peer1.developers.workspace/msp:/etc/hyperledger/fabric/msp
@@ -122,6 +128,7 @@ services:
         - peer1.developers.workspace:/var/hyperledger/production
     ports:
       - 7051:7051
+      - 7001:7001
     networks:
       - byfn
 
