--- a/test-network/moniter and logging/monitering/provisioning/datasources/datasource.yaml
+++ b/test-network/moniter and logging/monitering/provisioning/datasources/datasource.yaml
@@ -10,7 +10,7 @@ datasources:
     type: "prometheus"
     access: "proxy"
     orgId: 1
-    url: "http://localhost:9090"
+    url: "http://35.187.252.139:9090"
     isDefault: true
     version: 1
     editable: false
