--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,23 @@ networks:
   byfn:
 
 services:
+  couchdb0:
+    container_name: couchdb0
+    image: couchdb:3.1.1
+    labels:
+      service: hyperledger-fabric
+    # Populate the COUCHDB_USER and COUCHDB_PASSWORD to set an admin user and password
+    # for CouchDB.  This will prevent CouchDB from operating in an "Admin Party" mode.
+    environment:
+      - COUCHDB_USER=admin
+      - COUCHDB_PASSWORD=adminpw
+    # Comment/Uncomment the port mapping if you want to hide/expose the CouchDB service,
+    # for example map it to utilize Fauxton User Interface in dev environments.
+    ports:
+      - "5984:5984"
+    networks:
+      - byfn
+
   orderer1.workspace:
     extends:
       file: base.yaml
@@ -31,9 +48,9 @@ services:
     container_name: orderer1.workspace
     networks:
     - byfn
-    # environment:
-      # - ORDERER_OPERATIONS_LISTENADDRESS=0.0.0.0:9443
-      # - ORDERER_METRICS_PROVIDER=prometheus
+    environment:
+      - ORDERER_OPERATIONS_LISTENADDRESS=orderer1.workspace:9443
+      - ORDERER_METRICS_PROVIDER=prometheus
     volumes:
         - ./channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
         - ./crypto-config/ordererOrganizations/workspace/orderers/orderer1.workspace/msp:/var/hyperledger/orderer/msp
@@ -41,7 +58,7 @@ services:
         - orderer1.workspace:/var/hyperledger/production/orderer
     ports:
     - 7050:7050
-    # - 9443:9443
+    - 9443:9443
 
   orderer2.workspace:
     extends:
@@ -72,7 +89,6 @@ services:
         - orderer3.workspace:/var/hyperledger/production/orderer
     ports:
     - 9050:7050
-
 
   orderer4.workspace:
     extends:
@@ -119,8 +135,17 @@ services:
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer2.developers.workspace:8051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.developers.workspace:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
-      - ORDERER_OPERATIONS_LISTENADDRESS=0.0.0.0:9444
+      - CORE_OPERATIONS_LISTENADDRESS=peer1.developers.workspace:9444
       - CORE_METRICS_PROVIDER=prometheus
+
+      # for CouchDB
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb0:5984
+      # The CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME and CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
+      # provide the credentials for ledger to connect to CouchDB.  The username and password must
+      # match the username and password set for the associated CouchDB.
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=admin
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=adminpw
     volumes:
         - /var/run/:/host/var/run/
         - ./crypto-config/peerOrganizations/developers.workspace/peers/peer1.developers.workspace/msp:/etc/hyperledger/fabric/msp
